<resources>
    <string name="app_name">Valo_Basha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">"open"</string>
    <string name="close">"close"</string>
    <string name="title_activity_add_picture">ScrollingActivity</string>
    <string name="tutorial_text">These FAQs Will Help You Understand How To Use All The Features Of This App.</string>
    <string name="tq1">1. Is this app free to use?</string>
    <string name="ta1">Yes, it is free for both house owners and the ones who are looking for a house. You do not need to pay any money for the service.</string>
    <string name="tq2">2. I want to rent out a house. What should I do?</string>
    <string name="ta2">Just sign up for the app and provide the required information.</string>
    <string name="tq3">3. How can I search for a house in a particular area?</string>
    <string name="ta3">Go to the map section and search for your desired area.</string>
    <string name="tq4">4. I was mistreated by a house owner/ house seeker. What can I do about it?</string>
    <string name="ta4">We are extremely sorry for your bad experience. We have a report section where you can give us details and we will take necessary steps accordingly.</string>
    <string-array name="furniture_spinner">
        <item>Without furniture</item>
        <item>With furniture</item>
    </string-array>
</resources>